test/Fail/Issue2906.agda

data D : Set where
  zero : D
  suc  : D → D

postulate
  f : D → D

{-# COMPILE GHC f = \ x -> x #-}
